--- a/app.json
+++ b/app.json
@@ -18,15 +18,21 @@
     "list": [
       {
         "pagePath": "pages/index/index",
-        "text": "首页"
+        "text": "首页",
+        "iconPath": "images/home.png",
+        "selectedIconPath": "images/home-active.png"
       },
       {
         "pagePath": "pages/menu/menu",
-        "text": "点餐"
+        "text": "点餐",
+        "iconPath": "images/menu.png",
+        "selectedIconPath": "images/menu-active.png"
       },
       {
         "pagePath": "pages/order/order",
-        "text": "订单"
+        "text": "订单",
+        "iconPath": "images/order.png",
+        "selectedIconPath": "images/order-active.png"
       }
     ]
   }
