更新餐厅信息：蓓蓓的餐厅 - 深圳市福永街道聚福园

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#ff6b6b",
-    "navigationBarTitleText": "美味餐厅",
+    "navigationBarTitleText": "蓓蓓的餐厅",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
