添加小程序发布完整指南

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#ff6b6b",
-    "navigationBarTitleText": "蓓蓓的餐厅",
+    "navigationBarTitleText": "家林的餐厅",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
